--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -21,6 +21,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -128,6 +129,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from preprocessing import arg_tuple\n",
+    "from inspect import getfullargspec\n",
+    "getfullargspec(foo._func)\n",
+    "#arg_tuple(foo._func, 1, 4, z=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -142,6 +155,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -168,14 +182,46 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "foo(1,4,3,3)"
+    "foo(1,4,3,2) # Last arg should be kw-only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo(1,4,a=3,z=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo(1,4,a=7,z=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from preprocessing import arg_tuple\n",
+    "def baz(a, b, c=3, d=4, *, e, f=6, g=7):\n",
+    "    return a+b+c+d+e+f+g\n",
+    "arg_tuple(baz,10,2,3, e=50, g=3, f=6)"
    ]
   }
  ],
