--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -129,7 +129,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "from preprocessing import arg_tuple\n",
@@ -189,13 +193,43 @@
    },
    "outputs": [],
    "source": [
-    "foo(1,4,3,2) # Last arg should be kw-only"
+    "foo(1,4,3,a=3) # Last arg is kw-only, and ignored"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "foo(1,4,3,a=7) # Last arg is kw-only, and used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "foo._func(1, 4, 3, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "foo(1,4,a=3,z=3)"
@@ -204,7 +238,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "foo(1,4,a=7,z=3)"
@@ -214,7 +252,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
