worksheet: remove a cell

--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
+    "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -75,7 +75,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
+    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -207,19 +207,6 @@
    "outputs": [],
    "source": [
     "foo(1,4,3,a=7) # Last arg is kw-only, and used"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "foo._func(1, 4, 3, 2)"
    ]
   },
   {
