--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -11,24 +11,38 @@
    },
    "outputs": [],
    "source": [
-    "from persist import triple, double, foo\n",
-    "triple.clear()\n",
-    "double.clear()\n",
-    "foo.clear()"
+    "from persist import persist"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "triple(4)"
+    "from time import sleep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@persist(basedir='dirfortriple')\n",
+    "def triple(x):\n",
+    "    sleep(3)\n",
+    "    return 3 * x\n",
+    "\n",
+    "triple.clear()"
    ]
   },
   {
@@ -61,9 +75,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@persist(pickle=repr, unpickle=eval)\n",
+    "def double(x):\n",
+    "    sleep(3)\n",
+    "    return 2 * x\n",
+    "\n",
+    "double.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -131,15 +163,16 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
-    "from preprocessing import arg_tuple\n",
-    "from inspect import getfullargspec\n",
-    "getfullargspec(foo._func)\n",
-    "#arg_tuple(foo._func, 1, 4, z=3)"
+    "@persist(funcdir='foofighters')\n",
+    "def foo(x, y, z=1, *, a=3):\n",
+    "    return x + y + z + a\n",
+    "\n",
+    "foo.clear()"
    ]
   },
   {
@@ -147,7 +180,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -201,7 +234,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -214,12 +247,12 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "foo(1,4,a=3,z=3)"
+    "foo(1,4,a=3,z=3) # Default arg in non-canonical order"
    ]
   },
   {
@@ -232,7 +265,23 @@
    },
    "outputs": [],
    "source": [
-    "foo(1,4,a=7,z=3)"
+    "foo(1,4,a=7,z=3) # Non-default arg in non-canonical order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from preprocessing import arg_tuple\n",
+    "from inspect import getfullargspec\n",
+    "getfullargspec(foo._func)\n",
+    "#arg_tuple(foo._func, 1, 4, z=3)"
    ]
   },
   {
