--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "@persist(basedir='dirfortriple')\n",
     "def triple(x):\n",
-    "    sleep(3)\n",
+    "    sleep(1)\n",
     "    return 3 * x\n",
     "\n",
     "triple.clear()"
@@ -49,6 +49,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -83,7 +84,7 @@
    "source": [
     "@persist(pickle=repr, unpickle=eval)\n",
     "def double(x):\n",
-    "    sleep(3)\n",
+    "    sleep(1)\n",
     "    return 2 * x\n",
     "\n",
     "double.clear()"
@@ -300,6 +301,93 @@
     "    return a+b+c+d+e+f+g\n",
     "arg_tuple(baz,10,2,3, e=50, g=3, f=6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@persist\n",
+    "def sum(*args):\n",
+    "    acc = 0\n",
+    "    for x in args:\n",
+    "        acc += x\n",
+    "    return acc\n",
+    "sum.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sum(1,4,3,7,3,12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sum(4,12,7,3,3,1)  # recomputed since the args are in different order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@persist(key=lambda *args: sorted(args))\n",
+    "def sum(*args):\n",
+    "    acc = 0\n",
+    "    for x in args:\n",
+    "        acc += x\n",
+    "    return acc\n",
+    "sum.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sum(1,4,3,7,3,12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sum(4,12,7,3,3,1)  # args sorted and answer retrieved from cache"
+   ]
   }
  ],
  "metadata": {
@@ -319,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
