--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -350,7 +350,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "@persist(key=lambda *args: sorted(args))\n",
@@ -387,6 +391,68 @@
    "outputs": [],
    "source": [
     "sum(4,12,7,3,3,1)  # args sorted and answer retrieved from cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@persist(key=lambda x,y: (x,y),\n",
+    "         hash=lambda k: '%s_to_the_%s' % k,\n",
+    "         pickle=str,\n",
+    "         unpickle=int)\n",
+    "def pow(x,y):\n",
+    "    return x**y\n",
+    "pow.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pow(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pow(7,4)\n",
+    "pow(1,3)\n",
+    "pow(10,5)\n",
+    "pow(0,0)\n",
+    "pow(2,16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pow(2,3)"
    ]
   }
  ],
