Update worksheet for storekey

--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "from persist import persist"
+    "from persist import persist, PersistError"
    ]
   },
   {
@@ -403,13 +403,25 @@
    },
    "outputs": [],
    "source": [
-    "@persist(key=lambda x,y: (x,y),\n",
-    "         hash=lambda k: '%s_to_the_%s' % k,\n",
+    "@persist(hash=lambda k: '%s_to_the_%s' % (k[0][1], k[1][1]),\n",
     "         pickle=str,\n",
     "         unpickle=int)\n",
     "def pow(x,y):\n",
     "    return x**y\n",
     "pow.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pow(2,3)"
    ]
   },
   {
@@ -447,12 +459,60 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@persist(hash=lambda k: 'abc',\n",
+    "         storekey=True)\n",
+    "def square(x):\n",
+    "    return x*x\n",
+    "square.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "pow(2,3)"
+    "square(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "square(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    square(4)\n",
+    "except PersistError as pe:\n",
+    "    print(\"Hash collision for keys\", pe.args[0], 'and', pe.args[1])"
    ]
   }
  ],
