--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -587,6 +587,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for key in square.cache.keys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for val in square.cache.values():\n",
+    "    print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pair in square.cache.items():\n",
+    "    print(pair)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "square(12)"
    ]
   },
