--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -31,6 +31,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -76,7 +77,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "triple.cache[(('x', 4),)]"
@@ -86,7 +91,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -97,7 +105,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -108,7 +119,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -122,7 +136,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -135,7 +152,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "len(triple.cache)"
@@ -675,10 +696,11 @@
    },
    "outputs": [],
    "source": [
+    "from diskcache import HashCollisionError\n",
     "try:\n",
     "    square(4)\n",
-    "except PersistError as pe:\n",
-    "    print(\"Hash collision for keys\", pe.args[0], 'and', pe.args[1])"
+    "except HashCollisionError as hce:\n",
+    "    print(\"Hash collision for keys\", hce.args[0], 'and', hce.args[1])"
    ]
   }
  ],
