Improve notebook generally

--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -24,7 +24,8 @@
    },
    "outputs": [],
    "source": [
-    "from time import sleep"
+    "from time import sleep\n",
+    "from os import listdir"
    ]
   },
   {
@@ -84,6 +85,19 @@
    },
    "outputs": [],
    "source": [
+    "triple(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "triple.cache[(('x', 4),)]"
    ]
   },
@@ -119,24 +133,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    print(triple.cache[(('x', 5),)])\n",
-    "except KeyError as e:\n",
-    "    print(\"bad key:\", e.args[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -144,7 +141,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    del triple.cache[(('x', 5),)]\n",
+    "    print(triple.cache[(('x', 5),)])\n",
     "except KeyError as e:\n",
     "    print(\"bad key:\", e.args[0])"
    ]
@@ -261,6 +258,7 @@
    "source": [
     "@persist(funcdir='foofighters')\n",
     "def foo(x, y, z=1, *, a=3):\n",
+    "    sleep(1)\n",
     "    return x + y + z + a\n",
     "\n",
     "foo.clear()"
@@ -317,7 +315,7 @@
    },
    "outputs": [],
    "source": [
-    "foo(1,4,3,a=3) # Last arg is kw-only, and ignored"
+    "foo(1,4,3,a=3)  # Last arg has the default value, so it is ignored"
    ]
   },
   {
@@ -363,22 +361,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from preprocessing import arg_tuple\n",
-    "from inspect import getfullargspec\n",
-    "getfullargspec(foo._func)\n",
-    "#arg_tuple(foo._func, 1, 4, z=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
@@ -389,7 +371,7 @@
     "from preprocessing import arg_tuple\n",
     "def baz(a, b, c=3, d=4, *, e, f=6, g=7):\n",
     "    return a+b+c+d+e+f+g\n",
-    "arg_tuple(baz,10,2,3, e=50, g=3, f=6)"
+    "arg_tuple(baz, 10, 2, 3, e=50, g=3, f=6)"
    ]
   },
   {
@@ -404,6 +386,7 @@
    "source": [
     "@persist\n",
     "def sum(*args):\n",
+    "    sleep(1)\n",
     "    acc = 0\n",
     "    for x in args:\n",
     "        acc += x\n",
@@ -442,13 +425,14 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
     "@persist(key=lambda *args: sorted(args))\n",
     "def sum(*args):\n",
+    "    sleep(1)\n",
     "    acc = 0\n",
     "    for x in args:\n",
     "        acc += x\n",
@@ -493,25 +477,12 @@
    },
    "outputs": [],
    "source": [
-    "@persist(hash=lambda k: '%s_to_the_%s' % (k[0][1], k[1][1]),\n",
+    "@persist(hash=lambda k: '%s to the %s' % (k[0][1], k[1][1]),\n",
     "         pickle=str,\n",
     "         unpickle=int)\n",
     "def pow(x,y):\n",
     "    return x**y\n",
     "pow.clear()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "pow(2,3)"
    ]
   },
   {
@@ -550,6 +521,32 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "listdir('persist/pow')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "open('persist/pow/7 to the 4.out', 'r').read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
@@ -565,7 +562,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -575,7 +575,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "square(0)"
@@ -584,7 +588,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "len(square.cache)"
@@ -594,51 +602,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
     "for key in square.cache:\n",
     "    print(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key in square.cache.keys():\n",
-    "    print(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for val in square.cache.values():\n",
-    "    print(val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for pair in square.cache.items():\n",
-    "    print(pair)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "square(12)"
    ]
   },
   {
@@ -651,7 +623,104 @@
    },
    "outputs": [],
    "source": [
-    "@persist(hash=lambda k: 'abc',\n",
+    "for key in square.cache.keys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for val in square.cache.values():\n",
+    "    print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for pair in square.cache.items():\n",
+    "    print(pair)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@persist(hash=lambda k: 'hello world')\n",
+    "def square(x):\n",
+    "    return x*x\n",
+    "square.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "square(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "square(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "listdir('persist/square')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@persist(hash=lambda k: 'hello world',\n",
     "         storekey=True)\n",
     "def square(x):\n",
     "    return x*x\n",
@@ -682,25 +751,73 @@
    },
    "outputs": [],
    "source": [
-    "square(3)"
+    "from diskcache import HashCollisionError\n",
+    "try:\n",
+    "    square(4)\n",
+    "except HashCollisionError as hce:\n",
+    "    print(\"Hash collision for keys\", hce.args[0], 'and', hce.args[1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@persist(key=float,\n",
+    "         hash=lambda k: f'e to the {k}',\n",
+    "         unhash=lambda s: float(s[9:]))\n",
+    "def exp(x):\n",
+    "    return 2.71828 ** x\n",
+    "exp.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "from diskcache import HashCollisionError\n",
-    "try:\n",
-    "    square(4)\n",
-    "except HashCollisionError as hce:\n",
-    "    print(\"Hash collision for keys\", hce.args[0], 'and', hce.args[1])"
+    "print(exp(2))\n",
+    "print(exp(2.0))\n",
+    "print(exp(-1))\n",
+    "print(exp(3.14))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for key in exp.cache:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for key,val in exp.cache.items():\n",
+    "    print('e to the', key, 'equals', val)"
    ]
   }
  ],
