Include code for running a server

--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -836,6 +836,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Run this block somewhere else, or navigate to mongodb_server and execute run.py\n",
+    "from eve import Eve\n",
+    "import os\n",
+    "fname = os.path.join(os.getcwd(), 'mongodb_server', 'settings.py')\n",
+    "app = Eve(settings=fname)\n",
+    "app.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
