--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -872,26 +872,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "start_and_end(\"hello world\")"
+    "start_and_end('Hello World!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "start_and_end('Doctor')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "start_and_end(\"hello world\")"
+    "start_and_end('Doctor')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "del start_and_end.cache[(('string','Hello World!'),)]"
    ]
   },
   {
@@ -906,6 +930,13 @@
    "source": [
     "start_and_end.clear()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
