--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -865,7 +865,8 @@
     "\n",
     "@persist(backend=\"mongodb\")\n",
     "def start_and_end(string):\n",
-    "    return string[0] + string[-1]"
+    "    return string[0] + string[-1]\n",
+    "start_and_end.clear()"
    ]
   },
   {
@@ -936,7 +937,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "@persist(backend=\"mongodb\", storekey=True)\n",
+    "def alternating(string):\n",
+    "    return string[0::2]\n",
+    "alternating.cache.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alternating('University of St Andrews')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alternating('University of St Andrews')"
+   ]
   }
  ],
  "metadata": {
