--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -761,6 +761,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -856,7 +857,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -866,6 +867,7 @@
     "@persist(backend=\"mongodb\")\n",
     "def start_and_end(string):\n",
     "    return string[0] + string[-1]\n",
+    "\n",
     "start_and_end.clear()"
    ]
   },
@@ -887,7 +889,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -912,7 +917,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -935,22 +943,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
+    "from persist import persist\n",
+    "\n",
     "@persist(backend=\"mongodb\", storekey=True)\n",
     "def alternating(string):\n",
-    "    return string[0::2]\n",
+    "    return string[::2]\n",
+    "\n",
     "alternating.cache.clear()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
-    "alternating('University of St Andrews')"
+    "alternating('steadfastness')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "alternating('steadfastness')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "words = ['ballooned', 'biannually', 'curliness', 'pursuance', 'situation', 'thesaurus']\n",
+    "[alternating(word) for word in words]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for pair in alternating.cache.items():\n",
+    "    print(pair)"
    ]
   },
   {
@@ -958,9 +1019,79 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
    "source": [
-    "alternating('University of St Andrews')"
+    "@persist(backend=\"mongodb\",\n",
+    "         key=float,\n",
+    "         hash=lambda k: f'e to the {k}',\n",
+    "         unhash=lambda s: float(s[len('e to the '):]))\n",
+    "def exp(x):\n",
+    "    return 2.71828 ** x\n",
+    "exp.clear()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(exp(2))\n",
+    "print(exp(2.0))\n",
+    "print(exp(-1))\n",
+    "print(exp(3.14))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for key in exp.cache:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for key,val in exp.cache.items():\n",
+    "    print('e to the', key, 'equals', val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
