Handle backends properly with `cache` input

--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "@persist(basedir='dirfortriple')\n",
+    "@persist\n",
     "def triple(x):\n",
     "    sleep(1)\n",
     "    return 3 * x\n",
@@ -255,7 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "@persist(funcdir='foofighters')\n",
+    "@persist(funcname='foofighters')\n",
     "def foo(x, y, z=1, *, a=3):\n",
     "    sleep(1)\n",
     "    return x + y + z + a\n",
@@ -383,7 +383,7 @@
    },
    "outputs": [],
    "source": [
-    "@persist\n",
+    "@persist(cache='file://dirfortriple')\n",
     "def sum(*args):\n",
     "    sleep(1)\n",
     "    acc = 0\n",
@@ -845,11 +845,11 @@
    "outputs": [],
    "source": [
     "# Run this block somewhere else, or navigate to mongodb_server and execute run.py\n",
-    "from eve import Eve\n",
-    "import os\n",
-    "fname = os.path.join(os.getcwd(), 'mongodb_server', 'settings.py')\n",
-    "app = Eve(settings=fname)\n",
-    "app.run()"
+    "#from eve import Eve\n",
+    "#import os\n",
+    "#fname = os.path.join(os.getcwd(), 'mongodb_server', 'settings.py')\n",
+    "#app = Eve(settings=fname)\n",
+    "#app.run()"
    ]
   },
   {
@@ -864,7 +864,7 @@
    "source": [
     "from persist import persist\n",
     "\n",
-    "@persist(backend=\"mongodb\")\n",
+    "@persist(cache=\"mongodb://localhost:5000/memos/\")\n",
     "def start_and_end(string):\n",
     "    return string[0] + string[-1]\n",
     "\n",
@@ -952,7 +952,7 @@
    "source": [
     "from persist import persist\n",
     "\n",
-    "@persist(backend=\"mongodb\", storekey=True)\n",
+    "@persist(cache=\"mongodb://localhost:5000/memos/\", storekey=True)\n",
     "def alternating(string):\n",
     "    return string[::2]\n",
     "\n",
@@ -1017,13 +1017,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -1032,7 +1025,7 @@
    },
    "outputs": [],
    "source": [
-    "@persist(backend=\"mongodb\",\n",
+    "@persist(cache=\"mongodb://localhost:5000/memos/\",\n",
     "         key=float,\n",
     "         hash=lambda k: f'e to the {k}',\n",
     "         unhash=lambda s: float(s[len('e to the '):]))\n",
