Tidy up how caches work

--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -10,7 +10,7 @@
    },
    "outputs": [],
    "source": [
-    "from persist import persist, PersistError"
+    "from persist import persist"
    ]
   },
   {
