Slightly adjust worksheet

--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -38,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "@persist\n",
+    "@persist(cache='file://dirfortriple')\n",
     "def triple(x):\n",
     "    sleep(1)\n",
     "    return 3 * x\n",
@@ -383,7 +384,7 @@
    },
    "outputs": [],
    "source": [
-    "@persist(cache='file://dirfortriple')\n",
+    "@persist\n",
     "def sum(*args):\n",
     "    sleep(1)\n",
     "    acc = 0\n",
