--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -1,17 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# pymemo\n",
+    "### Persistent memoisation framework for Python\n",
+    "This notebook shows some of the features available in pymemo.\n",
+    "\n",
+    "Find more information at https://github.com/mtorpey/pymemo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "The main feature of pymemo is the `persist` decorator:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
-    "from persist import persist"
+    "from pymemo import persist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Let us also import some other libraries, just for testing:"
    ]
   },
   {
@@ -19,7 +56,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -29,17 +66,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The following function waits for a second, then returns the triple of a given number.  We memoise it by decorating it with `@persist`:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
-    "@persist(cache='file://dirfortriple')\n",
+    "@persist\n",
     "def triple(x):\n",
     "    sleep(1)\n",
     "    return 3 * x\n",
@@ -256,7 +304,7 @@
    },
    "outputs": [],
    "source": [
-    "@persist(funcname='foofighters')\n",
+    "@persist(cache='file://results_for_alice/', funcname='foofighters')\n",
     "def foo(x, y, z=1, *, a=3):\n",
     "    sleep(1)\n",
     "    return x + y + z + a\n",
@@ -751,7 +799,7 @@
    },
    "outputs": [],
    "source": [
-    "from diskcache import HashCollisionError\n",
+    "from commoncache import HashCollisionError\n",
     "try:\n",
     "    square(4)\n",
     "except HashCollisionError as hce:\n",
@@ -863,8 +911,6 @@
    },
    "outputs": [],
    "source": [
-    "from persist import persist\n",
-    "\n",
     "@persist(cache=\"mongodb://localhost:5000/memos/\")\n",
     "def start_and_end(string):\n",
     "    return string[0] + string[-1]\n",
@@ -951,8 +997,6 @@
    },
    "outputs": [],
    "source": [
-    "from persist import persist\n",
-    "\n",
     "@persist(cache=\"mongodb://localhost:5000/memos/\", storekey=True)\n",
     "def alternating(string):\n",
     "    return string[::2]\n",
